bk_ida/gccida/c0/make_extraction
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6378:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6381:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+14h] [rbp-10Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode; // [rsp+D0h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode extraction_mode; // [rsp+D4h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6397:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pos_mode; // [rsp+D8h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6398:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_inner_reg_mode; // [rsp+DCh] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6399:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_inner_mode; // [rsp+E0h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6400:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+E4h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6401:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode is_mode; // [rsp+E8h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6407:36: error: invalid suffix 'xmode' on integer constant
wanted_inner_reg_mode = *(short *)0xmode; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6408:23: error: invalid suffix 'xmode' on integer constant
pos_mode = *(short *)0xmode; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6409:30: error: invalid suffix 'xmode' on integer constant
extraction_mode = *(short *)0xmode; 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6531:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)pos_rtx))) == 0 ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/combine.c:6531:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)pos_rtx))) == 0 ) 
                 ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_extraction/src/obj/combine.o] Error 1
